--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://unpkg.com/@changesets/config@2.3.1/schema.json",
-  "changelog": ["@changesets/changelog-github", { "repo": "nativewaves/nw-web" }],
+  "changelog": ["@changesets/changelog-github", { "repo": "silltho/merge-strategy-testing" }],
   "commit": false,
   "fixed": [["*"]],
   "linked": [],
