--- a/package.json
+++ b/package.json
@@ -13,10 +13,50 @@
     "changelog-version": "node ./scripts/changelog-version.js"
   },
   "devDependencies": {
-    "@changesets/changelog-github": "^0.4.8",
-    "@changesets/cli": "^2.26.2",
-    "dotenv": "^16.3.1",
-    "shelljs": "^0.8.5"
+    "@etchteam/storybook-addon-status": "^4.2.1",
+    "@nrwl/nx-cloud": "^15.1.1",
+    "@storybook/addon-actions": "^7.0.4",
+    "@storybook/addon-backgrounds": "^7.0.4",
+    "@storybook/addon-controls": "^7.0.4",
+    "@storybook/addon-docs": "^7.0.4",
+    "@storybook/addon-viewport": "^7.0.4",
+    "@storybook/addons": "^7.0.4",
+    "@storybook/cli": "^7.0.4",
+    "@storybook/react": "^7.0.4",
+    "@storybook/react-vite": "^7.0.4",
+    "@storybook/theming": "^7.0.4",
+    "@types/debug": "4.1.7",
+    "@types/humanize-duration": "^3.18.0",
+    "@types/lodash-es": "^4.17.3",
+    "@types/node": "^18.13",
+    "@types/qrcode": "^1.5.0",
+    "@types/react": ">=16.14",
+    "@types/react-dom": ">=16.14",
+    "@types/react-helmet": "^6.1.5",
+    "@types/shelljs": "^0.8.9",
+    "@types/styled-components": "5.1.4",
+    "@types/uuid": "^7.0.0",
+    "@typescript-eslint/eslint-plugin": "5.59.0",
+    "@typescript-eslint/parser": "5.59.0",
+    "@vitejs/plugin-react": "^3.1.0",
+    "chromatic": "^6.10.2",
+    "dotenv": "10.0.0",
+    "dotenv-expand": "5.1.0",
+    "eslint": "8.39.0",
+    "eslint-config-prettier": "8.8.0",
+    "eslint-import-resolver-typescript": "3.5.5",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-storybook": "0.6.11",
+    "husky": "^8.0.3",
+    "nx": "15.8.3",
+    "prettier": "2.8.8",
+    "rimraf": "^5.0.0",
+    "storybook": "^7.0.4",
+    "typescript": "4.3.x",
+    "vite": "^4.1.4",
+    "vite-tsconfig-paths": "^4.0.5"
   },
   "engines": {
     "node": "^18.13",
